# Quasar_engine

./: .gitignore  CMakeLists.txt
Core/: CMakeLists.txt
Editor/: CMakeLists.txt
Editor/src/: Editor.cpp  EditorApp.cpp
QuasaeEngine/: CMakeLists.txt
QuasaeEngine/src/: Quasar.h  common.h
QuasaeEngine/src/Core/: Core.h  EntryPoint.h
QuasaeEngine/src/Core/Application/: Application.cpp  Application.h
Quasar/: CMakeLists.txt
Quasar/src/: Quasar.h  common.h
Quasar/src/Core/: EntryPoint.h
Quasar/src/Core/Application/: Application.cpp  Application.h
Quasar/src/Core/Window/: Window.cpp  Window.h
Quasar/src/Renderer/: Renderer.cpp  Renderer.h  Validation.cpp  Validation.h
Quasar/src/Window/: Window.h
SandBox/: CMakeLists.txt
SandBox/src/: SandBoxApp.cpp
